send email to user

--- a/Carrenta/Views/Order/Create.cshtml
+++ b/Carrenta/Views/Order/Create.cshtml
@@ -8,6 +8,7 @@
 {
   <input type="hidden" value="@ViewBag.CarID" name="carID" />
   <input type="hidden" value="@ViewBag.userID" name="userID" />
+  <input type="hidden" value="@ViewBag.userEmail" name="userEmail"/>
   <div class="form-group">
     <label>
       Choose start day:
