Carrenta is ready.

--- a/Carrenta/Views/Admin/Index.cshtml
+++ b/Carrenta/Views/Admin/Index.cshtml
@@ -19,3 +19,8 @@
   @Html.ActionLink("Manage users", "UserList", "User")
   <a></a>
 </p>
+
+<p>
+  Select orders between two days:
+  @Html.ActionLink("Select orders", "SelectRangePage", "Order")
+</p>
