--- a/Carrenta/Views/Home/About.cshtml
+++ b/Carrenta/Views/Home/About.cshtml
@@ -4,4 +4,14 @@
 <h2>About Carrenta</h2>
 <h3>Carrenta is meant to be simple. Our slogan is <em>Simply rent a car!</em></h3>
 
-<p>We love our clients!</p>
+<br />
+<hr />
+<br />
+
+<p>If you want to order a car:</p>
+<ul>
+  <li>Register in Carrenta</li>
+  <li>Fint a car you want</li>
+  <li>Place an order on desired dates</li>
+</ul>
+<p>Simple is that!</p>
