--- a/Carrenta/Views/User/UserList.cshtml
+++ b/Carrenta/Views/User/UserList.cshtml
@@ -12,12 +12,12 @@
       <th>Id</th>
       <th>Email</th>
       <th>EmailConfirmed</th>
-      <th>PasswordHash</th>
-      <th>SecurityStamp</th>
+      <th>PhoneNumber</th>
+      <th>PhoneNumberConfirmed</th>
       <th>TwoFactorEnabled</th>
-      <th>LockoutEndDateUtc</th>
       <th>LockoutEnabled</th>
-      <th>AccessFailedCount</th>
+      <th>Delete</th>
+      @*<th>Edit</th>*@
     </tr>
   </thead>
   <tbody>
@@ -30,10 +30,16 @@
         <td>@user.PhoneNumber</td>
         <td>@user.PhoneNumberConfirmed</td>
         <td>@user.TwoFactorEnabled</td>
-        <td>@user.LockoutEndDateUtc</td>
         <td>@user.LockoutEnabled</td>
-        <td>@user.AccessFailedCount</td>
-        <td><a class="delete-user">Delete</a></td>
+        <td>
+          @using (Html.BeginForm("DeleteUser", "User"))
+          {
+            @Html.AntiForgeryToken()
+            <input type="submit" class="btn btn-danger" value="Delete" id="btn" />
+            <input type="hidden" value=@user.Id name="userId" />
+          }
+        </td>
+        @*<td><a href="/User/Edit/@user.Id">Edit</a></td>*@
       </tr>
     }
   </tbody>
